# meow

./: ARCHITECTURE_DECISION.md  CHANGELOG.md  CONFIG_EXAMPLE.md  Cargo.toml  EXAMPLE_CONFIGURABLE_COMPONENT.md  LICENSE  LUA_COMPONENTS.md  README.md  SPARKLINE_CONFIG.md  SPARKLINE_IMPROVEMENTS.md  TODO.md  cliff.toml
.github/workflows/: ci.yml  release.yml
crates/bar/: Cargo.toml  Cargo.toml.bak
crates/bar/src/: component_manager.rs  config.rs  lib.rs  logging.rs  lua_component.rs  main.rs  wayland_client.rs
crates/bar/src/components/: battery.rs  brightness.rs  cpu.rs  error_icon.rs  middle_bar.rs  mod.rs  ram.rs  right_bar.rs  sparkline.rs  temperature.rs  time.rs  volume.rs  weather.rs  wifi.rs  windows.rs  workspaces.rs
crates/catfood/: Cargo.toml
crates/catfood/src/: main.rs
scripts/: setup.sh  validate.sh
src/: component_manager.rs  config.rs  config_tests.rs  logging.rs  main.rs
src/components/: battery.rs  brightness.rs  cpu.rs  error_icon.rs  left_bar.rs  middle_bar.rs  mod.rs  ram.rs  right_bar.rs  separator.rs  space.rs  system_bar.rs  temperature.rs  time.rs  volume.rs  vpn.rs  weather.rs  wifi.rs  workspaces.rs
