[package]
name = "meow"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Thom Bruce <thom@thombruce.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.42"
battery = "0.7.8"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
