[package]
name = "meow"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["Thom Bruce <thom@thombruce.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.42"
battery = "0.7.8"
# TODO: sysinfo is quite a large dependency, providing info for MacOS and Windows as well as Linux, right?
# Consider requiring only what is explicitly needed... which, given that meow will right now only work on
# Linux, means Linux-specific features. Alternatively... keep it and consider generalising Linux-specific
# code to work on other operating systems.
sysinfo = "0.37.2"
regex = "1.12.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
