[workspace]
members = [
    "crates/bar",
    "crates/catfood",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Thom Bruce <thom@thombruce.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/thombruce/catfood_bar"
homepage = "https://github.com/thombruce/catfood_bar"
description = "A modular utility suite for system management, built with Rust and Ratatui"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
publish = false
verify = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true