[package]
name = "catfood-bar"
version.workspace = true
description = "A system bar component of the catfood utility suite"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chrono = "0.4.42"
battery = "0.7.8"
sysinfo = "0.37.2"
regex = "1.12.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
notify = "8.2"
lazy_static = "1.4"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
clap = { version = "4.0", features = ["derive"] }
libc = "0.2"
which = "6.0"
