[package]
name = "catfood"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
catfood-bar = { path = "../bar", version = "0.1.0" }
color-eyre = "0.6.3"
libc = "0.2"